--- a/MarsArchive/Base.lproj/Main.storyboard
+++ b/MarsArchive/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -19,60 +19,63 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to Mars" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="00j-hh-epb">
-                                <rect key="frame" x="89" y="50" width="196" height="27.5"/>
-                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="23"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to Mars" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="16" translatesAutoresizingMaskIntoConstraints="NO" id="00j-hh-epb">
+                                <rect key="frame" x="20" y="40" width="334" height="45.666666666666671"/>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="38"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lRb-Nu-vRV">
-                                <rect key="frame" x="66" y="161" width="243" height="48"/>
-                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="30"/>
-                                <state key="normal" title="CURIOSITY">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="curiosityPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fu7-vd-diL"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jn3-7h-CRf">
-                                <rect key="frame" x="76.5" y="239" width="222" height="48"/>
-                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="30"/>
-                                <state key="normal" title="OPPORTUNITY">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="opportunityPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="mmx-Bk-9uc"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VoT-gA-Kto">
-                                <rect key="frame" x="137.5" y="317" width="100" height="48"/>
-                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="30"/>
-                                <state key="normal" title="SPIRIT">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="spiritPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="a5h-8D-CDB"/>
-                                </connections>
-                            </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="100" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="LtM-by-6GS" userLabel="Rover Table">
+                                <rect key="frame" x="4" y="127" width="406" height="609"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="RoverCell" rowHeight="100" id="NP1-WS-aMi">
+                                        <rect key="frame" x="0.0" y="28" width="406" height="100"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="NP1-WS-aMi" id="pfb-Cd-zQ1">
+                                            <rect key="frame" x="0.0" y="0.0" width="373" height="100"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r01-c8-onc">
+                                                    <rect key="frame" x="15" y="33" width="147" height="35"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="30"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select A Rover To Continue" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="yMc-wo-G5p">
+                                <rect key="frame" x="20" y="95.666666666666686" width="304" height="21.333333333333329"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.25882352941176467" green="0.25882352941176467" blue="0.25882352941176467" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="lRb-Nu-vRV" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="50" id="3L1-mr-GDX"/>
-                            <constraint firstItem="jn3-7h-CRf" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="4Sf-3k-dxA"/>
-                            <constraint firstItem="VoT-gA-Kto" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="7kS-rN-HMe"/>
-                            <constraint firstItem="00j-hh-epb" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="30" id="MGF-sK-9tY"/>
-                            <constraint firstItem="VoT-gA-Kto" firstAttribute="top" secondItem="jn3-7h-CRf" secondAttribute="bottom" constant="30" id="f5g-K9-uM3"/>
-                            <constraint firstItem="lRb-Nu-vRV" firstAttribute="top" secondItem="00j-hh-epb" secondAttribute="bottom" constant="83.5" id="iRf-sm-OkR"/>
-                            <constraint firstItem="jn3-7h-CRf" firstAttribute="top" secondItem="lRb-Nu-vRV" secondAttribute="bottom" constant="30" id="jhQ-5j-fid"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="lRb-Nu-vRV" secondAttribute="trailing" constant="50" id="mbT-Yg-eKp"/>
-                            <constraint firstItem="lRb-Nu-vRV" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="tGn-gO-6pi"/>
-                            <constraint firstItem="00j-hh-epb" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="zXb-N9-XRC"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="yMc-wo-G5p" secondAttribute="trailing" constant="70" id="0ut-U3-CON"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="00j-hh-epb" secondAttribute="trailing" constant="40" id="4Ba-An-ZnH"/>
+                            <constraint firstItem="LtM-by-6GS" firstAttribute="top" secondItem="yMc-wo-G5p" secondAttribute="bottom" constant="10" id="5qN-rb-5Qz"/>
+                            <constraint firstItem="LtM-by-6GS" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-16" id="SNU-7x-C5n"/>
+                            <constraint firstItem="00j-hh-epb" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="40" id="eL3-WO-ohF"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="LtM-by-6GS" secondAttribute="trailing" constant="-16" id="hBV-QZ-746"/>
+                            <constraint firstItem="00j-hh-epb" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="jym-Ab-pGB"/>
+                            <constraint firstAttribute="bottom" secondItem="LtM-by-6GS" secondAttribute="bottom" id="sGe-G8-YIc"/>
+                            <constraint firstItem="yMc-wo-G5p" firstAttribute="top" secondItem="00j-hh-epb" secondAttribute="bottom" constant="10" id="tG4-Ta-br0"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="yMc-wo-G5p" secondAttribute="leading" id="uIc-AU-DPA"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="LtM-by-6GS" id="nQ3-qD-6Br"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -87,11 +90,11 @@
                         <viewControllerLayoutGuide type="bottom" id="gFJ-Ul-gsT"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="bZW-yf-Vse">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZE5-sy-jGo" userLabel="Dashboard">
-                                <rect key="frame" x="0.0" y="527" width="375" height="140"/>
+                                <rect key="frame" x="0.0" y="596" width="414" height="140"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SOL" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bl0-aY-ZUF">
                                         <rect key="frame" x="16" y="8" width="33" height="21"/>
@@ -106,13 +109,13 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.90000000000000002" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="JQA-Cs-h5Q">
-                                        <rect key="frame" x="14" y="37" width="347" height="31"/>
+                                        <rect key="frame" x="14" y="37" width="386" height="31"/>
                                         <color key="minimumTrackTintColor" red="0.85098039219999999" green="0.41960784309999999" blue="0.38823529410000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <color key="maximumTrackTintColor" red="0.25882352939999997" green="0.25882352939999997" blue="0.25882352939999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <color key="thumbTintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                     </slider>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="QlH-Fj-QUN" customClass="CameraSelectionView">
-                                        <rect key="frame" x="16" y="77" width="343" height="47"/>
+                                        <rect key="frame" x="16" y="77" width="382" height="47"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="MJP-p8-a1H">
                                             <size key="itemSize" width="66" height="46"/>
