--- a/MarsArchive/Base.lproj/LaunchScreen.storyboard
+++ b/MarsArchive/Base.lproj/LaunchScreen.storyboard
@@ -24,7 +24,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icon" translatesAutoresizingMaskIntoConstraints="NO" id="yJq-hn-Hvs">
-                                <rect key="frame" x="26" y="172" width="323" height="323"/>
+                                <rect key="frame" x="26" y="50" width="323" height="323"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="yJq-hn-Hvs" secondAttribute="height" multiplier="1:1" id="7yO-QD-qBG"/>
                                 </constraints>
@@ -33,8 +33,8 @@
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="yJq-hn-Hvs" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="10" id="1Wt-Nv-o2B"/>
-                            <constraint firstItem="yJq-hn-Hvs" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="SHO-ch-tPl"/>
                             <constraint firstAttribute="trailingMargin" secondItem="yJq-hn-Hvs" secondAttribute="trailing" constant="10" id="efe-J1-C11"/>
+                            <constraint firstItem="yJq-hn-Hvs" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="topMargin" constant="50" id="pIv-Gs-JOb"/>
                             <constraint firstItem="yJq-hn-Hvs" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="r6n-5e-KJT"/>
                         </constraints>
                     </view>
